<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:id="@+id/activity_score"
    tools:context="com.example.joshuagoh.quizapp.ScoreActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dip">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question_1_outcome"
            android:paddingBottom="10dip"
            android:gravity="center"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/q1_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:gravity="center"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question_2_outcome"
            android:paddingBottom="10dip"
            android:gravity="center"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/q2_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:gravity="center"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question_3_outcome"
            android:paddingBottom="10dip"
            android:gravity="center"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/q3_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:gravity="center"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question_4_outcome"
            android:paddingBottom="10dip"
            android:gravity="center"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/q4_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:gravity="center"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question_5_outcome"
            android:paddingBottom="10dip"
            android:gravity="center"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/q5_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:gravity="center"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question_6_outcome"
            android:paddingBottom="10dip"
            android:gravity="center"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/q6_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:gravity="center"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question_7_outcome"
            android:paddingBottom="10dip"
            android:gravity="center"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/q7_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:gravity="center"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question_8_outcome"
            android:paddingBottom="10dip"
            android:gravity="center"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/q8_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:gravity="center"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/score_words"
            android:paddingBottom="10dip"
            android:gravity="center"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/final_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/score_number_field"
            android:gravity="center"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginTop="10dp">

        <Button
            android:text="@string/q1Ebutton"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:id="@+id/q1explainbtn"
            android:onClick="ChangeFragment"
            android:layout_weight="0.30" />

        <Button
            android:text="@string/q2Ebutton"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:id="@+id/q2explainbtn"
            android:onClick="ChangeFragment"
            android:layout_weight="0.30" />

        <Button
            android:text="@string/q3Ebutton"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:id="@+id/q3explainbtn"
            android:onClick="ChangeFragment"
            android:layout_weight="0.30" />

        <Button
            android:text="@string/q4Ebutton"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:id="@+id/q4explainbtn"
            android:onClick="ChangeFragment"
            android:layout_weight="0.30" />

        <Button
            android:text="@string/q5Ebutton"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:id="@+id/q5explainbtn"
            android:onClick="ChangeFragment"
            android:layout_weight="0.30" />

        <Button
            android:text="@string/q6Ebutton"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:id="@+id/q6explainbtn"
            android:onClick="ChangeFragment"
            android:layout_weight="0.30" />

        <Button
            android:text="@string/q7Ebutton"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:id="@+id/q7explainbtn"
            android:onClick="ChangeFragment"
            android:layout_weight="0.30" />

        <Button
            android:text="@string/q8Ebutton"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:id="@+id/q8explainbtn"
            android:onClick="ChangeFragment"
            android:layout_weight="0.30" />

    </LinearLayout>

    <fragment
        android:name="layout.FragmentOneExplanation"
        android:id="@+id/fragment_place"
        android:layout_width="match_parent"
        android:layout_height="106dp"
        ></fragment>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seeScoresButton"
            android:text="@string/see_scores"
            android:onClick="seeScores"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/endQuizButton"
            android:text="@string/end_quiz"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:onClick="endQuiz" />

    </LinearLayout>

</LinearLayout>