<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_dark"
    tools:context="layout.FragmentFive"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:text="@string/question5"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/q5text"
            android:textColor="@color/white"
            />

        <RadioGroup
            android:id="@+id/q5_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:text="@string/true_frag5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/trueButton5"
                android:clickable="true"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                />

            <RadioButton
                android:text="@string/false_frag5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/falseButton5"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:clickable="true"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                />

        </RadioGroup>

        <Button
            android:id="@+id/submitButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_frag5"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:onClick="submit"
            />

        <Button
            android:id="@+id/cheatButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cheat_frag5"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:onClick="cheat"
            />

        <Button
            android:id="@+id/skipButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skip_frag5"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:onClick="skip"
            />

    </LinearLayout>

</FrameLayout>
